src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 60 4.8% 95.9%;
    --secondary-foreground: 24 9.8% 10%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;

    --destructive: 0 91% 65%;
    --destructive-foreground: 240 5.9% 15%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;

    --ring: 240 10% 3.9%;

    --radius: 0.4rem;

    --bg-dots-transparency: 8%;

    --brand: 175.3 66.3 51.2;
    --brand-foreground: 240 5.9% 15%;

    --warn: 50 91% 65%;
    --warn-foreground: 240 5.9% 15%;

    --info: 213 91% 65%;
    --info-foreground: 240 5.9% 7%;

    --success: 132 91% 65%;
    --success-foreground: 240 5.9% 15%;
  }

  .dark {
    --background: 0 0% 7%;
    --foreground: 0 0% 98%;

    --card: 0 0% 6%;
    --card-foreground: 0 0% 98%;

    --popover: 0 0% 6%;
    --popover-foreground: 0 0% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 1.2%;

    --secondary: 12 6.5% 15.1%;
    --secondary-foreground: 60 9.1% 97.8%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;

    --ring: 240 4.9% 83.9%;

    --brand: 162 73% 60%;
    --brand-foreground: 240 5.9% 15%;

    --warn: 50 91% 65%;
    --warn-foreground: 240 5.9% 15%;

    --info: 213 91% 65%;
    --info-foreground: 240 5.9% 7%;

    --success: 132 91% 65%;
    --success-foreground: 240 5.9% 15%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply text-foreground;
  }
}

.body-gradient {
  background-image: radial-gradient(hsl(var(--ring) / var(--bg-dots-transparency)) 1px,
      transparent 1px),
    radial-gradient(hsl(var(--ring) / var(--bg-dots-transparency)) 1px,
      transparent 1px);
  background-size: 20px 20px;
  background-position:
    0px 0px,
    10px 10px;
}

